--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ css/_custom.scss
 css/_global.scss
 css/_grid.scss
 css/_lg.scss
-css/_md.sccs
+css/_md.scss
 css/_scrollbar.scss
 css/_text.scss
 css/_var.scss
